--- a/app/views/companies/_form.html.haml
+++ b/app/views/companies/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for @company do |f|
+= form_for(@company, html:{class: "form-horizontal"}) do |f|
   - if @company.errors.any?
     #error_explanation
       %h2= "#{pluralize(@company.errors.count, "error")} prohibited this company from being saved:"
@@ -6,11 +6,15 @@
         - @company.errors.full_messages.each do |msg|
           %li= msg
 
-  .field
-    = f.label :name
-    = f.text_field :name
-  .field
-    = f.label :description
-    = f.text_area :description
-  .actions
-    = f.submit 'Save'
+  .field.form-group
+    = f.label :name, class: "col-sm-2 control-label"
+    .col-sm-6
+      = f.text_field :name, class: "form-control"
+  .field.form-group
+    = f.label :description, class: "col-sm-2 control-label"
+    .col-sm-6
+      = f.text_area :description, class: "form-control"
+ 
+  .actions.col-sm-offset-2.col-sm-6
+    = f.submit 'Save', class: "btn btn-default"
+
