trying out buttons in side panel

--- a/app/views/companies/index.html.haml
+++ b/app/views/companies/index.html.haml
@@ -1,21 +1,15 @@
 %h1 Listing companies
 
-%table
+%table.table.table-stripped
   %tr
-    %th Name
-    %th Description
-    %th
-    %th
-    %th
+    %th Company
+    %th Income
+    %th Expense
+    %th Pen - Income
+    %th Pen - Expense
+    %th Balance
+  =render @companies
+  
 
-  - @companies.each do |company|
-    %tr
-      %td= company.name
-      %td= company.description
-      %td= link_to 'Show', company
-      %td= link_to 'Edit', edit_company_path(company)
-      %td= link_to 'Destroy', company, :method => :delete, :data => { :confirm => 'Are you sure?' }
-
-%br
 
 = link_to 'New Company', new_company_path
