design of sidebars somewhat comming on

--- a/app/assets/stylesheets/common.sass
+++ b/app/assets/stylesheets/common.sass
@@ -1,2 +1,10 @@
 .align-left
   text-align: left
+  
+ul.side-panel
+  margin: 0px
+  padding: 0px
+  list-style-type: none
+  li
+    display: block
+    margin-top: 10px
