--- a/app/views/books/show.html.haml
+++ b/app/views/books/show.html.haml
@@ -1,15 +1,8 @@
-%p#notice= notice
+.panel.panel-primary
+  .panel-heading
+    = @book.name
+    (Rs)
+  .panel-body
+    = link_to "<< #{@company.name}", @company, class: "btn btn-default"
+  .panel-footer= @book.description
 
-%p
-  %b Name:
-  = @book.name
-%p
-  %b Description:
-  = @book.description
-%p
-  %b Company:
-  = @book.company
-
-= link_to 'Edit', edit_book_path(@book)
-\|
-= link_to 'Back', books_path
