--- a/app/views/common/_side_bar.html.haml
+++ b/app/views/common/_side_bar.html.haml
@@ -1,3 +1,4 @@
-%ul.side-panel
-  %li= link_to "Boo", "#", class: "btn btn-primary col-sm-8"
-  %li=link_to "Boom Thata", "#", class: "btn btn-primary col-sm-8"
+%ul.nav.nav-pills.nav-stacked
+  %li= link_to "<< All Companies", "#"
+  %li= link_to "Boo", "#"
+  %li= link_to "Boom Thata", "#"
