--- a/app/views/records/_form.html.haml
+++ b/app/views/records/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for @record do |f|
+= form_for(@record, html:{class: "form-horizontal"}) do |f|
   - if @record.errors.any?
     #error_explanation
       %h2= "#{pluralize(@record.errors.count, "error")} prohibited this record from being saved:"
@@ -6,17 +6,19 @@
         - @record.errors.full_messages.each do |msg|
           %li= msg
 
-  .field
-    = f.label :amount
-    = f.text_field :amount
-  .field
-    = f.label :description
-    = f.text_area :description
-  .field
-    = f.label :book
-    = f.text_field :book
-  .field
-    = f.label :status
-    = f.select :status, record_status_options
-  .actions
-    = f.submit 'Save', class: "btn btn-primary"
+  .field.form-group
+    = f.label :amount, class: "col-sm-2 control-label"
+    .col-sm-6
+      = f.text_field :amount, class: "form-control"
+  .field.form-group
+    = f.label :description, class: "col-sm-2 control-label"
+    .col-sm-6
+      = f.text_area :description, class: "form-control"
+  .field.form-group
+    = f.label :status, class: "col-sm-2 control-label"
+    .col-sm-6
+      = f.select :status, record_status_options, class: "form-control"
+  .actions.col-sm-offset-2.col-sm-6
+    = hidden_field_tag "record[book_id]", 1
+    .col-sm-6
+      = f.submit 'Save', class: "btn btn-default"
