--- a/app/views/books/_book.html.haml
+++ b/app/views/books/_book.html.haml
@@ -1,7 +1,7 @@
 %tr
   %td= link_to book.name, company_book_path(book.company, book)
-  %td 175,815,286.00 /-
-  %td 175,815,286.00 /-
-  %td 175,815,286.00 /-
-  %td 175,815,286.00 /-
-  %td 175,815,286.00 /-
+  %td= book.income
+  %td= book.expense
+  %td= book.pending_income
+  %td= book.pending_expense
+  %td= book.balance
