--- a/app/views/books/_book.html.haml
+++ b/app/views/books/_book.html.haml
@@ -1,7 +1,9 @@
-%tr
-  %td= link_to book.name, company_book_path(book.company, book)
-  %td= book.income
-  %td= book.expense
-  %td= book.pending_income
-  %td= book.pending_expense
-  %td= book.balance
+.panel.panel-primary
+  .panel-heading
+    .panel-title= link_to book.name, company_book_records_path(book.company, book)
+  .panel-body
+    = link_to pluralize(book.records.count, "Records"), company_book_records_path(book.company, book),
+      class: "btn btn-default"
+    = link_to "Edit", edit_company_book_path(book.company, book), class: "btn btn-default"
+    = link_to "Delete", company_book_path(book.company, book), method: :delete, class: "btn btn-default", "data-confirm" => "Really want to delete this book?"
+  .panel-footer= book.description
