--- a/app/views/companies/_company.html.haml
+++ b/app/views/companies/_company.html.haml
@@ -1,4 +1,8 @@
-%li
-  = link_to company.name, company
-  ,
-  = link_to "#{company.books.count} Books", company_books_path(company)
+.panel.panel-primary
+  .panel-heading
+    .panel-title= link_to company.name, company_books_path(company)
+  .panel-body
+    = link_to pluralize(company.books.count, "Book"), company_books_path(company), class: "btn btn-default"
+    = link_to "Edit", edit_company_path(company), class: "btn btn-default"
+    = link_to "Delete", company, method: :delete, class: "btn btn-default", "data-confirm" => "Really want to delete this company?"
+  .panel-footer= company.description
