some design applied to records page

--- a/app/views/records/index.html.haml
+++ b/app/views/records/index.html.haml
@@ -8,7 +8,7 @@
     .pull-right
       = render partial: "common/search_form"
   .panel-footer
-    %ul
+    %ul.tranx-brief
       %li= "Income: #{@book.income}"
       %li= "Expense: #{@book.expense}"
       %li= "Pen-Inc: #{@book.pending_income}"
