--- a/app/views/books/index.html.haml
+++ b/app/views/books/index.html.haml
@@ -2,7 +2,7 @@
   .panel-body
     = link_to raw('<span class="glyphicon glyphicon-home"></span>'), root_path,
       class: "btn btn-default"
-    = link_to @company.name, "#", class: "btn btn-default"
+    = link_to @company.name, company_books_path(@company), class: "btn btn-default"
     = link_to 'New Book', new_company_book_path(@company), class: "btn btn-default"
     .pull-right
       = render partial: "common/search_form"
