--- a/app/views/common/_search_form.haml
+++ b/app/views/common/_search_form.haml
@@ -1,4 +1,4 @@
 = form_tag({action: :index}, method: :get, class: "form-inline", role: "form") do
   .form-group
-    = search_field_tag :s
+    = search_field_tag :s, params[:s]
   = submit_tag "Search", class: "btn btn-default"
