all screens now has a top bar

--- a/app/views/companies/edit.html.haml
+++ b/app/views/companies/edit.html.haml
@@ -1,7 +1,6 @@
+= render partial: 'top_bar'
+
 %h1 Editing company
 
 = render 'form'
 
-= link_to 'Show', @company
-\|
-= link_to 'Back', companies_path
