--- a/app/views/records/edit.html.haml
+++ b/app/views/records/edit.html.haml
@@ -1,3 +1,10 @@
-%h1 Editing record
+.panel
+  = render partial: 'top_bar'
+%h2
+  Editing
+  = @company.name
+  \/
+  = @book.name
+  \/ record
 
 = render 'form'
