--- a/app/views/records/index.html.haml
+++ b/app/views/records/index.html.haml
@@ -1,12 +1,5 @@
 .panel
-  .panel-body
-    = link_to raw('<span class="glyphicon glyphicon-home"></span>'), root_path,
-      class: "btn btn-default"
-    = link_to @company.name, company_books_path(@company), class: "btn btn-default"
-    = link_to @book.name, company_book_records_path(@company, @book), class: "btn btn-default"
-    = link_to 'Add Record', new_company_book_record_path(@company, @book), class: "btn btn-default"
-    .pull-right
-      = render partial: "common/search_form"
+  = render partial: 'top_bar'
   .panel-footer
     %ul.tranx-brief
       - Record.statuses.keys.each do |key| 
