pagination added for records

--- a/app/views/records/index.html.haml
+++ b/app/views/records/index.html.haml
@@ -12,5 +12,7 @@
     %th Description
     %th Amount
     %th Actions
-  = render @records
+  = render @records_page
+
+= paginate @records_page, :theme => 'twitter-bootstrap-3'
 
