--- a/app/views/records/new.html.haml
+++ b/app/views/records/new.html.haml
@@ -1,3 +1,10 @@
-%h1 New record
+.panel
+  = render partial: 'top_bar'
+
+%h2
+  = @company.name
+  \/
+  = @book.name
+  \/ New record
 
 = render 'form'
