pagination for companies and books added

--- a/app/views/books/index.html.haml
+++ b/app/views/books/index.html.haml
@@ -1,3 +1,6 @@
 = render partial: 'top_bar'
 
-= render @books
+.row= render @books
+
+.row
+  .col-md-12= paginate @books, :theme => 'twitter-bootstrap-3'
