--- a/app/assets/stylesheets/common.sass
+++ b/app/assets/stylesheets/common.sass
@@ -8,3 +8,12 @@ ul.side-panel
   li
     display: block
     margin-top: 10px
+
+footer
+  text-align: center
+  ul
+    margin: 0px
+    padding: 0px
+    li
+      display: inline
+      margin-right: 8px
