--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,4 +10,10 @@
       .row
         .col-md-6.col-md-offset-3= render partial: "common/alerts"
       = yield
+      .row
+        %footer
+          %hr
+          %ul
+            %li= link_to "Updates", "https://dspora.org/u/coin71"
+            %li= link_to "Code", "https://github.com/mindaslab/erp"
 
