--- a/app/views/layouts/devise.html.haml
+++ b/app/views/layouts/devise.html.haml
@@ -4,15 +4,17 @@
   %body
     %nav.navbar.navbar-inverse.navbar-static-top{"role"=>"navigation"}
       = form_for(resource, :as => resource_name, :url => session_path(resource_name), html:{class: "navbar-form navbar-right"}) do |f|
-        = f.label :email
-        = f.email_field :email, :autofocus => true
-        = f.label :password
-        = f.password_field :password
+        = f.email_field :email, :autofocus => true, placeholder: "Email"
+        = f.password_field :password, placeholder: "Password"
+        = f.submit "Sign in", class: "btn btn-success"
         - if devise_mapping.rememberable?
-          %div
+          .white-text
             = f.check_box :remember_me
             = f.label :remember_me
-        %div= f.submit "Sign in", class: "btn btn-success"
+            \|
+            = link_to "Forgot Password", new_user_password_path
+            \|
+            = link_to "Register", new_user_registration_path
     .container-fluid
       .row
         .col-md-6.col-md-offset-3= render partial: "common/alerts"
