added signout links

--- a/app/views/books/_top_bar.html.haml
+++ b/app/views/books/_top_bar.html.haml
@@ -2,6 +2,8 @@
   .panel-body
     = link_to raw('<span class="glyphicon glyphicon-home"></span>'), root_path,
       class: "btn btn-default"
+    = link_to raw('<span class="glyphicon glyphicon-user"></span> Signout'), destroy_user_session_path,
+      class: "btn btn-default", method: :delete
     = link_to @company.name, company_books_path(@company), class: "btn btn-default"
     = link_to 'New Book', new_company_book_path(@company), class: "btn btn-default"
     .pull-right
