--- a/app/views/records/_top_bar.html.haml
+++ b/app/views/records/_top_bar.html.haml
@@ -1,6 +1,8 @@
 .panel-body
   = link_to raw('<span class="glyphicon glyphicon-home"></span>'), root_path,
     class: "btn btn-default"
+  = link_to raw('<span class="glyphicon glyphicon-user"></span> Signout'), destroy_user_session_path,
+    class: "btn btn-default", method: :delete
   = link_to @company.name, company_books_path(@company), class: "btn btn-default"
   = link_to @book.name, company_book_records_path(@company, @book), class: "btn btn-default"
   = link_to 'Add Record', new_company_book_record_path(@company, @book), class: "btn btn-default"
