sno displayed in views

--- a/app/views/records/_record.haml
+++ b/app/views/records/_record.haml
@@ -1,4 +1,5 @@
 %tr{class: record_color(record)}
+  %td= "##{record.sno}"
   %td= record.time.to_s(:short)
   %td= record.description
   %td= record.amount
