set up width for description column

--- a/app/views/records/index.html.haml
+++ b/app/views/records/index.html.haml
@@ -11,7 +11,7 @@
   %tr
     %th Sno
     %th Time
-    %th Description
+    %th{width: "40%"} Description
     %th Amount
     %th State
     %th Actions
