--- a/app/views/records/show.html.haml
+++ b/app/views/records/show.html.haml
@@ -20,6 +20,13 @@
       %b Status:
       = @record.status
 .row
+  .col-md-12
+    = link_to "Edit", edit_company_book_record_path(@company, @book, @record),
+    class: "btn btn-xs btn-warning"
+    = link_to "Delete", company_book_record_path(@company, @book, @record),
+    class: "btn btn-xs btn-danger", confirm: "Do you really want to delete thi record?",
+    method: :delete
+.row
   .col-md-8
     %h2 Notes
   .col-md-4
