--- a/app/views/books/_book.html.haml
+++ b/app/views/books/_book.html.haml
@@ -1,9 +1,9 @@
 .col-md-6
   .panel.panel-primary
     .panel-heading
-      .panel-title= link_to book.name, company_book_records_path(book.company, book)
+      .panel-title= link_to book.name, company_book_finance_records_path(book.company, book)
     .panel-body
-      = link_to pluralize(book.records.count, "Records"), company_book_records_path(book.company, book),
+      = link_to pluralize(book.finance_records.count, "Records"), company_book_finance_records_path(book.company, book),
         class: "btn btn-default"
       = link_to "Edit", edit_company_book_path(book.company, book), class: "btn btn-default"
       = link_to "Delete", company_book_path(book.company, book), method: :delete, class: "btn btn-default", "data-confirm" => "Really want to delete this book?"
