--- a/app/views/contacts/_form.html.haml
+++ b/app/views/contacts/_form.html.haml
@@ -7,7 +7,7 @@
           %li= msg
 
   .field.form-group
-    = f.label :name, class: "col-sm-2 control-label"
+    = f.label :name, "Name / Organizatiion", class: "col-sm-2 control-label"
     .col-sm-6
       = f.text_field :name, class: "form-control"
   .field.form-group
@@ -17,7 +17,7 @@
   .field.form-group
     = f.label :email, class: "col-sm-2 control-label"
     .col-sm-6
-      = f.text_field :email, class: "form-control"
+      = f.email_field :email, class: "form-control"
   .field.form-group
     = f.label :address, class: "col-sm-2 control-label"
     .col-sm-6
