top_bar added in various places in contact

--- a/app/views/contacts/_contact.haml
+++ b/app/views/contacts/_contact.haml
@@ -1,1 +1,8 @@
-%h1= contact.name
+.col-md-3
+  %p
+    %b= link_to contact.name, [@company, contact]
+  %p= contact.email
+  %p= contact.ph
+  %p
+    = contact.city
+    = contact.zip
