--- a/app/views/contacts/edit.html.haml
+++ b/app/views/contacts/edit.html.haml
@@ -1,7 +1,5 @@
+= render partial: "top_bar"
+
 %h1 Editing contact
 
 = render 'form'
-
-= link_to 'Show', @contact
-\|
-= link_to 'Back', contacts_path
