--- a/app/views/contacts/_top_bar.html.haml
+++ b/app/views/contacts/_top_bar.html.haml
@@ -4,7 +4,7 @@
       class: "btn btn-default"
     = link_to raw('<span class="glyphicon glyphicon-user"></span> Signout'), destroy_user_session_path,
       class: "btn btn-default", method: :delete
-    = link_to @company.name, company_books_path(@company), class: "btn btn-default"
+    = link_to @company.name, company_contacts_path(@company), class: "btn btn-default"
     = link_to 'New Contact', new_company_contact_path(@company), class: "btn btn-default"
     .pull-right
       = render partial: "common/search_form"
