--- a/app/views/finance_records/show.html.haml
+++ b/app/views/finance_records/show.html.haml
@@ -19,19 +19,21 @@
     %p
       %b Status:
       = @record.status
-  .col-md-4#contact-search
-    = text_field_tag :s, nil, id: "contact-content", placeholder: "Search Contact",
-    autocomplete: "off"
-    = hidden_field_tag "contact-search-path", "/companies/#{@company.id}/contacts/search"
-    = hidden_field_tag "record-id", @record.id
-    #contact-search-result
-.row
-  .col-md-12
-    = link_to "Edit", edit_company_book_finance_record_path(@company, @book, @record),
-    class: "btn btn-xs btn-warning"
-    = link_to "Delete", company_book_finance_record_path(@company, @book, @record),
-    class: "btn btn-xs btn-danger", confirm: "Really want to delete record?",
-    method: :delete
+    %p
+      = link_to "Edit", edit_company_book_finance_record_path(@company, @book, @record),
+      class: "btn btn-xs btn-warning"
+      = link_to "Delete", company_book_finance_record_path(@company, @book, @record),
+      class: "btn btn-xs btn-danger", confirm: "Really want to delete record?",
+      method: :delete
+  - unless @record.contact
+    .col-md-4#contact-search
+      = text_field_tag :s, nil, id: "contact-content", placeholder: "Search Contact",
+      autocomplete: "off"
+      = hidden_field_tag "contact-search-path", "/companies/#{@company.id}/contacts/search"
+      = hidden_field_tag "record-id", @record.id
+      #contact-search-result
+  - else
+    = render partial: "record_contact"
 .row
   .col-md-8
     %h2 Notes
