--- a/app/views/finance_records/_top_bar.html.haml
+++ b/app/views/finance_records/_top_bar.html.haml
@@ -1,10 +1,19 @@
 .panel-body
   = link_to raw('<span class="glyphicon glyphicon-home"></span>'), root_path,
     class: "btn btn-default"
-  = link_to raw('<span class="glyphicon glyphicon-user"></span> Signout'), destroy_user_session_path,
-    class: "btn btn-default", method: :delete
   = link_to @company.name, company_books_path(@company), class: "btn btn-default"
   = link_to @book.name, company_book_finance_records_path(@company, @book), class: "btn btn-default"
   = link_to 'Add Record', new_company_book_finance_record_path(@company, @book), class: "btn btn-default"
+  .btn-group
+    %button.btn.btn-default.dropdown-toggle{"data-toggle" => "dropdown", :type => "button"}
+      %span.glyphicon.glyphicon-cog
+      %span.caret
+    %ul.dropdown-menu{:role => "menu"}
+      %li
+        %a Download as Excel
+      %li.divider
+      %li
+        = link_to raw('<span class="glyphicon glyphicon-user"></span> Signout'), destroy_user_session_path,
+          method: :delete
   .pull-right
     = render partial: "common/search_form"
