--- a/app/views/finance_records/_top_bar.html.haml
+++ b/app/views/finance_records/_top_bar.html.haml
@@ -10,7 +10,8 @@
       %span.caret
     %ul.dropdown-menu{:role => "menu"}
       %li
-        %a Download as Excel
+        = link_to "Download as CSV", company_book_finance_records_path(@company, @book, format: "csv",
+        t: params[:t], s: params[:s])
       %li.divider
       %li
         = link_to raw('<span class="glyphicon glyphicon-user"></span> Signout'), destroy_user_session_path,
