--- a/app/views/finance_records/_top_bar.html.haml
+++ b/app/views/finance_records/_top_bar.html.haml
@@ -12,6 +12,9 @@
       %li
         = link_to "Download as CSV", company_book_finance_records_path(@company, @book, format: "csv",
         t: params[:t], s: params[:s])
+      %li
+        = link_to "Download as Excel", company_book_finance_records_path(@company, @book, format: "xls",
+        t: params[:t], s: params[:s])
       %li.divider
       %li
         = link_to raw('<span class="glyphicon glyphicon-user"></span> Signout'), destroy_user_session_path,
