--- a/app/views/contacts/_top_bar.html.haml
+++ b/app/views/contacts/_top_bar.html.haml
@@ -2,9 +2,15 @@
   .panel-body
     = link_to raw('<span class="glyphicon glyphicon-home"></span>'), root_path,
       class: "btn btn-default"
-    = link_to raw('<span class="glyphicon glyphicon-user"></span> Signout'), destroy_user_session_path,
-      class: "btn btn-default", method: :delete
     = link_to @company.name, company_contacts_path(@company), class: "btn btn-default"
     = link_to 'New Contact', new_company_contact_path(@company), class: "btn btn-default"
+    .btn-group
+      %button.btn.btn-default.dropdown-toggle{"data-toggle" => "dropdown", :type => "button"}
+        %span.glyphicon.glyphicon-cog
+        %span.caret
+      %ul.dropdown-menu{:role => "menu"}
+        %li
+          = link_to raw('<span class="glyphicon glyphicon-user"></span> Signout'), destroy_user_session_path,
+            method: :delete
     .pull-right
       = render partial: "common/search_form"
