--- a/app/views/finance_records/_finance_record.haml
+++ b/app/views/finance_records/_finance_record.haml
@@ -6,8 +6,8 @@
   %td= finance_record.amount
   %td= finance_record.status.gsub(/_/, ' ').capitalize
   %td
-    = link_to "Edit", edit_company_book_finance_record_path(@company, @book, finance_record),
+    = link_to "Edit", edit_company_book_finance_record_path(finance_record.book.company, finance_record.book, finance_record),
       class: "btn btn-default btn-sm"
-    = link_to "Delete", company_book_finance_record_path(@company, @book, finance_record),
+    = link_to "Delete", company_book_finance_record_path(finance_record.book.company, finance_record.book, finance_record),
       method: :delete, confirm: "Really want to delete record?",
       class: "btn btn-default btn-sm"
