added gitter URL

--- a/app/views/common/_footer.html.haml
+++ b/app/views/common/_footer.html.haml
@@ -4,3 +4,4 @@
     %ul
       %li= link_to "Updates", "https://dspora.org/u/coin71"
       %li= link_to "Code", "https://github.com/mindaslab/erp"
+      %li= link_to "Gitter", "https://gitter.im/mindaslab/erp"
